--- a/README
+++ b/README
@@ -1,1 +1,7 @@
 # msViz Backend
+A mass spectrometry visualization platform, developed by the PAF & Vital-IT, Swiss Institute of Bioinformatics.
+
+##
+
+## Authors
+Roman Mylonas (roman.mylonas@isb-sib.ch), Alexandre Masselot (alexandre.masselot@isb-sib.ch)
