a simple test an an updated README

--- a/README
+++ b/README
@@ -3,6 +3,8 @@ A mass spectrometry visualization platform, developed by the PAF & Vital-IT, Swi
 
 ## Development
 
+You must have Java installed (tested with 7, should work with 6)
+
  1. `git clone the project locally
  2. `cd msviz-backen`
  3. `./activator ui`
