--- a/README
+++ b/README
@@ -11,5 +11,27 @@ You must have Java installed (tested with 7, should work with 6)
 
 Then, you can run the test. Edit the source code with your preferred editor (from vi to Intellij). Test will be ran in the window at each save.
 
+### Run
+We have a running play application, so in development mode, it can be launched interactively (reloaded each time a source file is saved)
+
+    ./activator ~run
+
+## Data storage
+The backend store in, for the time being, only a mongo server. Download and install mongodb. Launch the daemon with a command like
+
+    mongod --fork --dbpath $HOME/work/mongodb/db --logpath $HOME/work/mongodb/mongod.log
+
+To check that everything is running ok, you can then connect with a mongo-shell via
+
+    mongo ms_viz
+
+The configuration on where to hit the mongodb server is described in the conf/application.conf file.
+
+## Load data
+### loading an mgf file as a run
+
+    curl -X POST --form mgf=@test/resources/F001644.mgf http://localhost:9000/exp/msrun
+
+
 ## Authors
-Roman Mylonas (roman.mylonas@isb-sib.ch), Alexandre Masselot (alexandre.masselot@isb-sib.ch)
+Roman Mylonas (roman.mylonas@isb-sib.ch), Trinidad Martin (trinidad.martin@isb-ib.ch) and  Alexandre Masselot (alexandre.masselot@isb-sib.ch)
